--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,24 +35,24 @@
               <h5>Registre-se</h5>
             </mat-panel-description>
           </mat-expansion-panel-header>
-          <form>
+          <form [formGroup]="registerForm">
             <mat-form-field class="w-100">
-              <input matInput placeholder="Nome" [(ngModel)]="user.name" name="name">
+              <input matInput placeholder="Nome" formControlName="name" [(ngModel)]="user.name" name="name">
             </mat-form-field>
             <mat-form-field class="w-100">
-              <input matInput placeholder="Data de Nascimento" [(ngModel)]="user.nasc" type="date" name="nasc">
+              <input matInput placeholder="Data de Nascimento" formControlName="nasc" [(ngModel)]="user.nasc" name="nasc" type="date">
             </mat-form-field>
             <mat-form-field class="w-100">
-              <input matInput placeholder="Cidade" [(ngModel)]="user.local" name="local">
+              <input matInput placeholder="Cidade" formControlName="local" [(ngModel)]="user.local" name="local">
             </mat-form-field>
             <mat-form-field class="w-100">
-              <input matInput placeholder="E-mail" [(ngModel)]="user.email" name="email">
+              <input matInput placeholder="E-mail" formControlName="email" [(ngModel)]="user.email" name="email">
             </mat-form-field>
             <mat-form-field class="w-100">
-              <input matInput placeholder="Cargo" [(ngModel)]="user.cargo" name="cargo">
+              <input matInput placeholder="Cargo" formControlName="cargo" [(ngModel)]="user.cargo" name="cargo">
             </mat-form-field>
             <mat-form-field class="w-100">
-              <input matInput placeholder="Senha" type="password" [(ngModel)]="user.password" name="password">
+              <input matInput placeholder="Senha" type="password" formControlName="password" [(ngModel)]="user.password" name="password">
             </mat-form-field>
           </form>
           <button mat-raised-button (click)="createUser()" color="primary">
