--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,3 +17,11 @@
   .mat-form-field-infix{
     width: 100% !important;
   }
+  .msg-error{
+    background-color: rgb(255, 0, 0);
+    color: #fff;
+  }
+  .msg-success{
+    background-color: rgb(45, 223, 0);
+    color: #fff;
+  }
