--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </button> -->
   <!-- header -->
   <div class="navbar-header pl-2 pr-2 ml-3 text-center">
-    <a class="navbar-brand m-0 w-100" href="#">
+    <a class="navbar-brand m-0 w-100" href="#" navLink="/home" navLinkActivate="active">
       <!-- <i class="fa fa-flash mr-1"></i> -->
       <img src="./assets/img/logo.png" alt="lightning logo" width="35px">
       <span class="ml-1">SmartAlert</span>
@@ -38,8 +38,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="btn nav-link">
-          <i class="far fa-envelope"></i>
+        <a ref="#" routerLink="/manager" routerLinkActive="active" class="btn nav-link">
+          <i class="fa fa-cog"></i>
           <span class="link-text">Messages</span>
           <!-- <span class="badge badge-pill badge-success">5</span> -->
           <span class="nav-alert messages"></span>
