--- a/src/assets/partials/_dashboard.scss
+++ b/src/assets/partials/_dashboard.scss
@@ -128,3 +128,11 @@ td:last-child {
 input{
   width: 450px !important;
 }
+.i-list{
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  line-height: 40px;
+  align-items: center;
+  border-bottom: 1px solid $navbar-bg-color;
+}
