feat: cruds (city, role) | add carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- <div *ngIf="isLogged === true"> -->
+<div *ngIf="isLogged === true">
   <div class="wrapper default-theme" [ngClass]="getClasses()">
     <app-navbar></app-navbar>
     <main>
@@ -11,8 +11,8 @@
       <div class="overlay" (click)="toggleSidebar()"></div>
     </main>
   </div>
-<!-- </div> -->
-<!-- <div *ngIf="isLogged === false">
+</div>
+<div *ngIf="isLogged === false">
   <div class="forms-container">
     <mat-card class="forms-container w-100">
       <mat-card-title>Faça Login</mat-card-title>
@@ -72,4 +72,4 @@
       </button>
     </mat-card>
   </div>
-</div> -->
+</div>
