--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -5,7 +5,7 @@
 <ngb-carousel *ngIf="images">
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img [src]="images[0]" alt="Random first slide">
+      <img src="https://www.revide.com.br/media/upload/noticias/2019/06/18/16/56/fotos_aereas_ribeirao_preto_creditos_jfpimentaimg_0848_(21).jpeg" alt="Random first slide">
     </div>
     <div class="carousel-caption">
       <h3>First slide label</h3>
@@ -14,7 +14,7 @@
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img [src]="images[1]" alt="Random second slide">
+      <img src="https://praondevaisaopaulo.com.br/wp-content/uploads/2019/07/cidades-inteligentes-web-2.jpg" alt="Random second slide">
     </div>
     <div class="carousel-caption">
       <h3>Second slide label</h3>
@@ -23,7 +23,7 @@
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img [src]="images[2]" alt="Random third slide">
+      <img src="https://s2.glbimg.com/1Wh9VrSZokI1CoRhHpdgeTapEnI=/e.glbimg.com/og/ed/f/original/2018/02/22/cidade.jpg" alt="Random third slide">
     </div>
     <div class="carousel-caption">
       <h3>Third slide label</h3>
