--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,10 @@
   .w-100 {
     width: 100%;
   }
-  w-40 {
+  .h-600{
+    height: 600px !important;
+  }
+  .w-40 {
     width: 40%;
   }
   button{
