--- a/src/assets/partials/_dashboard.scss
+++ b/src/assets/partials/_dashboard.scss
@@ -9,8 +9,8 @@
       font-size: 3rem;
     }
   }
-  .legend{
-    span:first-child{
+  .legend {
+    span:first-child {
       width: 10px;
       height: 10px;
     }
@@ -18,12 +18,12 @@
 }
 // others styles
 
-$bg-color:#f2f3f8;
-$navbar-bg-color : #242939;
-$navbar-color:#6e7899;
-$sidebar-bg-color:#fff;
-$sidebar-color:#3d4465;
-$sidebar-icon-color:#c4cff9;
+$bg-color: #f2f3f8;
+$navbar-bg-color: #242939;
+$navbar-color: #6e7899;
+$sidebar-bg-color: #fff;
+$sidebar-color: #3d4465;
+$sidebar-icon-color: #c4cff9;
 $border-color: #f2f3f8;
 
 .table-container {
@@ -61,7 +61,11 @@ td a {
 td:last-child {
   margin-right: 0 !important;
 }
-.resolvida{
+.delete {
+  color: #d31616;
+  cursor: pointer;
+}
+.resolvida {
   color: $border-color !important;
   background-color: #059900;
   width: 100px;
@@ -70,7 +74,7 @@ td:last-child {
   text-align: center;
   line-height: 40px;
 }
-.em-processo{
+.em-processo {
   color: $border-color !important;
   background-color: #d3c616;
   width: 150px;
@@ -79,7 +83,7 @@ td:last-child {
   text-align: center;
   line-height: 40px;
 }
-.nao-resolvida{
+.nao-resolvida {
   color: $border-color !important;
   background-color: #d31616;
   width: 200px;
@@ -88,51 +92,59 @@ td:last-child {
   text-align: center;
   line-height: 40px;
 }
-.ctn-solicitation{
-  padding: 10px;
+.ctn-solicitation {
+  margin: 10px;
+  height: 250px;
   color: $border-color;
   background: $navbar-bg-color;
   border-radius: 5px;
 }
-.ctn-solicitation div{
+.ctn-solicitation div {
   margin: 10px;
 }
-.btn-criar{
+.btn-criar {
   margin-bottom: 10px !important;
 }
-.m-2{
+.m-2 {
   margin: 2px;
 }
-.p-3{
+.p-3 {
   padding: 3px;
 }
-.d-flex{
+.d-flex {
   display: flex;
 }
-.justify-space-between{
+.justify-space-between {
   justify-content: space-between;
 }
-.justify-center{
+.justify-center {
   justify-content: center;
   text-align: center !important;
 }
-.flex-colum{
+.flex-colum {
   flex-direction: column;
 }
-.forms-container{
+.forms-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 40%;
 }
-input{
+input {
   width: 450px !important;
 }
-.i-list{
+.i-list {
   width: 100%;
   height: auto;
   margin-top: 10px;
   line-height: 40px;
   align-items: center;
   border-bottom: 1px solid $navbar-bg-color;
+}
+.wrapper main {
+  min-height: 900px;
+}
+.btn-status {
+  position: absolute;
+  bottom: 5px;
 }
