--- a/src/assets/partials/_dashboard.scss
+++ b/src/assets/partials/_dashboard.scss
@@ -26,6 +26,39 @@ $sidebar-color: #3d4465;
 $sidebar-icon-color: #c4cff9;
 $border-color: #f2f3f8;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  color: $border-color;
+}
+
+/* header */
+#header {
+  background-position-y: 50%;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  border-radius: 0 0 85% 85% / 30%;
+}
+#header #cover {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(75, 75, 75, 0.678);
+  border-radius: 0 0 85% 85% / 30%;
+}
+#header .container {
+  color: rgb(253, 246, 235);
+  margin: auto;
+  padding-top: 160px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+/* fim header */
 .table-container {
   width: 100%;
   padding: 15px;
