feat: layout adjusts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <header id="header" style="background-image: url('./assets/img/1.jpg');">
       <div id="cover">
         <div class="container">
+          <img src="../assets/img/logo.png" width="90" height="100">
           <h1>Smart Alert</h1>
           <p>Um sistema de alertas para a sua cidade!</p>
         </div>
