--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ $hamburger-hover-opacity       : 0.7 !default;
 
 @import '~bootstrap/scss/bootstrap';
 @import '~ngx-toastr/toastr-bs4-alert';
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap');
 
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
@@ -23,4 +24,4 @@ $hamburger-hover-opacity       : 0.7 !default;
 @import './assets/lightning-admin';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Exo 2', sans-serif; }
