feat: single solicitation component

--- a/src/assets/partials/_dashboard.scss
+++ b/src/assets/partials/_dashboard.scss
@@ -64,8 +64,8 @@ h1,h2,h3,h4,h5,h6{
 }
 #header img{
   margin: auto;
-  background: $border-color;
-  border-radius: 60%;
+  background: #ffffffc4;
+  border-radius: 45%;
 }
 /* fim header */
 .table-container {
