--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -7,11 +7,17 @@
 </div>
 
 <div class="d-flex flex-wrap justify-center">
-  <div *ngFor="let solicitation of solicitations" [ngClass]="{'resolvida': solicitation.status === 'ATIVO','nao-resolvida': solicitation.status !== 'ATIVO'}" class="col-xl-2 col-md-2 col-sm-4 ctn-solicitation p-3">
-    <mat-card-title><h3>{{ solicitation.title }}</h3></mat-card-title>
-    <div class="d-flex justify-center flex-colum">
-      <h6>LOCAL:</h6>
-      <p>{{ solicitation.local }}</p>
+  <div *ngFor="let solicitation of solicitations"
+    [ngClass]="{'resolvida': solicitation.status === 'ATIVO','nao-resolvida': solicitation.status !== 'ATIVO'}"
+    class="col-xl-2 col-md-2 col-sm-4 ctn-solicitation p-3">
+    <div routerLink="/solicitations/single/{{ solicitation.id }}">
+      <mat-card-title>
+        <h3>{{ solicitation.title }}</h3>
+      </mat-card-title>
+      <div class="d-flex justify-center flex-colum">
+        <h6>LOCAL:</h6>
+        <p>{{ solicitation.local }}</p>
+      </div>
     </div>
   </div>
 </div>
