--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,14 +1,16 @@
 <div class="p-3 d-flex justify-space-between">
   <h1>SOLICITAÇÕES</h1>
-  <div>
-    <button type="button" class="btn btn-success" href="#" routerLink="/csolicitation" routerLinkActive="active">Criar
-      Solicitação</button>
+  <div class="btn-solicitation">
+    <h6>Criar Solicitação</h6>
+    <button routerLink="/csolicitation"  mat-fab color="primary" aria-label="Example icon button with a delete icon">
+      <mat-icon routerLink="/csolicitation">add_alert</mat-icon>
+    </button>
   </div>
 </div>
 
 <div class="d-flex flex-wrap justify-center">
   <div *ngFor="let solicitation of solicitations"
-    [ngClass]="{'resolvida': solicitation.status === 'ATIVO','nao-resolvida': solicitation.status !== 'ATIVO'}"
+    [ngClass]="{'resolvida': solicitation.status === 'RESOLVIDO','nao-resolvida': solicitation.status !== 'RESOLVIDO'}"
     class="col-xl-2 col-md-2 col-sm-4 ctn-solicitation p-3">
     <div routerLink="/solicitations/single/{{ solicitation.id }}">
       <mat-card-title>
