--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,4 +1,14 @@
 .th{
     width: 20% !important;
 }
-
+.btn-solicitation{
+    align-items: center;
+    margin: 10px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.btn-solicitation button{
+    color: rgb(255, 255, 255);
+}
