--- a/src/assets/partials/_dashboard.scss
+++ b/src/assets/partials/_dashboard.scss
@@ -122,9 +122,15 @@ td:last-child {
   background-color: $navbar-bg-color;
   cursor: pointer;
 }
-.ctn-solicitation {
+.ctn-solicitation{
+  align-items: center;
   margin: 10px;
-  border-radius: 5px;
+  height: 250px;
+  width: 250px;
+  color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 .ctn-solicitation div {
   margin: 10px;
@@ -155,7 +161,7 @@ td:last-child {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 40%;
+  width: 35%;
 }
 input {
   width: 450px !important;
