--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
         <mat-expansion-panel hideToggle>
           <mat-expansion-panel-header>
             <mat-panel-description>
-              <h5>Registre-se</h5>
+              Registre-se
             </mat-panel-description>
           </mat-expansion-panel-header>
           <form [formGroup]="registerForm">
